--- a/test.html
+++ b/test.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is my website</title>
+		<title>Eerste website</title>
 	</head>
 	<body>
-		Hello World! Hello Again! Hello third time!
+		<h1>Website titel</h1>
+		<ul>
+			<li>Unordered list element 1</li>
+			<li>Unordered list element 2</li>
+			<li>Unordered list element 3</li>
+		</ul>
+		<ol>
+			<li>Ordered list element 1</li>
+			<li>Ordered list element 2</li>
+			<li>Ordered list element 3</li>
+		</ol>
+		<table>
+			<tr>
+				<th>coole dingen</th>
+				<th>andere coole dingen</th>
+			</tr>
+			<tr>
+				<td>cool ding 1</td>
+				<td>ander cool ding 1</td>
+			</tr>
+			<tr>
+				<td>cool ding 2</td>
+				<td>andere coole dingen</td>
+			</tr>
+		</table>
 	</body>
 </html>
