Eerste wijzigingen stylesheet en test implementatie in home.html

--- a/home.html
+++ b/home.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>Speurtocht</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        Hello, world!
+    	<header>
+    		<h1>Welkom bij de speurtocht!</h1>
+    	</header>
+    	<nav>
+    		
+    	</nav>
+    	<body>
+    		Welkom bij de speurtocht
+    	</body>
+    	<footer>
+
+    	</footer>
     </body>
 </html>
