Navigation bar in home.html

--- a/home.html
+++ b/home.html
@@ -3,14 +3,36 @@
     <head>
         <title>Speurtocht</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">"
     </head>
     <body>
     	<header>
     		<h1>Welkom bij de speurtocht!</h1>
     	</header>
-    	<nav>
-    		
-    	</nav>
+    	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Navbar</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		 		<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+		      		<li class="nav-item active">
+		      			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		    		</li>
+	      			<li class="nav-item dropdown">
+				        <a class="nav-link dropdown-toggle" href="aanwijzingen.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				          Aanwijzingen
+				        </a>
+				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				         	<a class="dropdown-item" href="aanwijzing1.html">Aanwijzing 1</a>
+				         	<a class="dropdown-item" href="aanwijzing2.html">Aanwijzing 2</a>
+				         	<a class="dropdown-item" href="aanwijzing3.html">Aanwijzing 3</a>
+				        </div>
+				      </li>
+		   		</ul>
+			</div>
+		</nav>
     	<body>
     		Welkom bij de speurtocht
     	</body>
