Alle aanwijzingen toegevoegd plus nav bar uitgebreid in home.html

--- a/home.html
+++ b/home.html
@@ -10,17 +10,37 @@
     		<h1>Welkom bij de speurtocht!</h1>
     	</header>
     	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		 		<span class="navbar-toggler-icon"></span>
-			</button>
-
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 		      		<li class="nav-item active">
-		      			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		      			<a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
 		    		</li>
-	      			<li class="nav-item dropdown">
+		    		<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing1.html">Aanwijzing 1</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing2.html">Aanwijzing 2</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing3.html">Aanwijzing 3</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing4.html">Aanwijzing 4</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing5.html">Aanwijzing 1</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing6.html">Aanwijzing 2</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing7.html">Aanwijzing 3</a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="aanwijzing8.html">Aanwijzing 4</a>
+      				</li>
+
+	      			<!--<li class="nav-item dropdown">
 				        <a class="nav-link dropdown-toggle" href="aanwijzingen.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				          Aanwijzingen
 				        </a>
@@ -29,7 +49,7 @@
 				         	<a class="dropdown-item" href="aanwijzing2.html">Aanwijzing 2</a>
 				         	<a class="dropdown-item" href="aanwijzing3.html">Aanwijzing 3</a>
 				        </div>
-				      </li>
+				      </li>-->
 		   		</ul>
 			</div>
 		</nav>
