--- a/home.html
+++ b/home.html
@@ -3,58 +3,28 @@
     <head>
         <title>Speurtocht</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">"
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     <body>
     	<header>
-    		<h1>Welkom bij de speurtocht!</h1>
+    		<h1>Project0 = SPEURTOCHT</h1>
     	</header>
     	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
 		      		<li class="nav-item active">
 		      			<a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
 		    		</li>
 		    		<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing1.html">Aanwijzing 1</a>
+        				<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
       				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing2.html">Aanwijzing 2</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing3.html">Aanwijzing 3</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing4.html">Aanwijzing 4</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing5.html">Aanwijzing 1</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing6.html">Aanwijzing 2</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing7.html">Aanwijzing 3</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="aanwijzing8.html">Aanwijzing 4</a>
-      				</li>
-
-	      			<!--<li class="nav-item dropdown">
-				        <a class="nav-link dropdown-toggle" href="aanwijzingen.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				          Aanwijzingen
-				        </a>
-				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				         	<a class="dropdown-item" href="aanwijzing1.html">Aanwijzing 1</a>
-				         	<a class="dropdown-item" href="aanwijzing2.html">Aanwijzing 2</a>
-				         	<a class="dropdown-item" href="aanwijzing3.html">Aanwijzing 3</a>
-				        </div>
-				      </li>-->
 		   		</ul>
 			</div>
 		</nav>
     	<body>
-    		Welkom bij de speurtocht
+    		<span class="contents">
+    			Welkom bij de speurtocht!
+    		</span>
     	</body>
     	<footer>
 
