--- a/aanwijzing2.html
+++ b/aanwijzing2.html
@@ -9,25 +9,20 @@
     	<header>
     		<h1>Project0 = SPEURTOCHT</h1>
     	</header>
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-		      		<li class="nav-item active">
-		      			<a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-		    		</li>
-		    		<li class="nav-item">
-        				<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
-      				</li>
-		   		</ul>
+    	<nav>
+    		<div class="navigation_bar">
+	    		<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-link active" href="home.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
-    	<body>
-    		<span class="contents">
-    			Aanwijzing 2
-    		</span>
-    	</body>
-    	<footer>
-
-    	</footer>
+		<div class="pagina">
+			<p>INPUT EERSTE AANWIJZING</p>
+		</div>
     </body>
 </html>
