--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -9,23 +9,31 @@
     	<header>
     		<h1>Project0 = SPEURTOCHT</h1>
     	</header>
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-		      		<li class="nav-item active">
-		      			<a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-		    		</li>
-		    		<li class="nav-item">
-        				<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
-      				</li>
-		   		</ul>
-			</div>
-		</nav>
-    	<body>
-    		<span class="contents">
-    			Aanwijzingen
-    		</span>
-    	</body>
+    	<nav>
+            <div class="navigation_bar">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="pagina">
+            <p>Op deze pagina staan de links naar alle verschillende aanwijzingen. Vanaf de verschillende aanwijzingen kan je natuurlijk ook naar de volgende aanwijzing.</p>
+        </div>
+		<div class="aanwijzing_box">
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing1.html'">Aanwijzing 1</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Aanwijzing 2</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing3.html'">Aanwijzing 3</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing4.html'">Aanwijzing 4</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing5.html'">Aanwijzing 5</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing6.html'">Aanwijzing 6</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
+            <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
+        </div>
     	<footer>
 
     	</footer>
