--- a/home.html
+++ b/home.html
@@ -9,25 +9,29 @@
     	<header>
     		<h1>Project0 = SPEURTOCHT</h1>
     	</header>
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-		      		<li class="nav-item active">
-		      			<a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
-		    		</li>
-		    		<li class="nav-item">
-        				<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
-      				</li>
-		   		</ul>
+    	<nav>
+    		<div class="navigation_bar">
+	    		<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-link active" href="home.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
     	<body>
-    		<span class="contents">
-    			Welkom bij de speurtocht!
-    		</span>
+    		<div class="pagina">
+    			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek van de speurtocht met de eerste instructie daarbij. Volg de intructies om bij de volgende aanwijzing te komen. Aan het einde van de speurtocht vindt je misschien wel een troFee. </p>
+    			<p>Benodigdheden voor deze speurtocht:</p>
+    			<ul>
+    				<li>Schaar</li>
+    				<li>Kompas</li>
+    			</ul>
+    			<img src="">
+    			<p>INPUT EERSTE INSTRUCTIE</p>
+    		</div>
     	</body>
-    	<footer>
-
-    	</footer>
     </body>
 </html>
