Small updates buttons in aanwijzingen

--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -24,5 +24,8 @@
 		<div class="pagina">
 			<p>INPUT EERSTE AANWIJZING</p>
 		</div>
+		<div class="aanwijzing_box" align:center>
+        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Aanwijzing 2</button></div>
+        </div>
     </body>
 </html>
