--- a/aanwijzing2.html
+++ b/aanwijzing2.html
@@ -22,7 +22,7 @@
 			</div>
 		</nav>
 		<div class="pagina">
-			<p>INPUT EERSTE AANWIJZING</p>
+			<p>INPUT TWEEDE AANWIJZING</p>
 		</div>
     </body>
 </html>
