--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -22,6 +22,7 @@
             </div>
         </nav>
         <div class="pagina">
+            <h3>AANWIJZINGEN</h3>
             <p>Op deze pagina staan de links naar alle verschillende aanwijzingen. Vanaf de verschillende aanwijzingen kan je natuurlijk ook naar de volgende aanwijzing.</p>
         </div>
 		<div class="aanwijzing_box">
@@ -34,8 +35,5 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
-    	<footer>
-
-    	</footer>
     </body>
 </html>
