--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
 		</nav>
     	<body>
     		<div class="pagina">
+    			<h3>START VAN DE SPEURTOCHT</h3>
     			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek van de speurtocht met de eerste instructie daarbij. Volg de intructies om bij de volgende aanwijzing te komen. Aan het einde van de speurtocht vindt je misschien wel een troFee. </p>
     			<p>Benodigdheden voor deze speurtocht:</p>
     			<ul>
