Volgende aanwijzing knoppen toegevoegd

--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -22,9 +22,10 @@
 			</div>
 		</nav>
 		<div class="pagina">
-			<p>INPUT EERSTE AANWIJZING</p>
+			<img src="foto_start.jpg">
+			<p>Je hebt de eerste aanwijzing gevonden!!! Nu begint het echte werk.</p>
 		</div>
-		<div class="aanwijzing_box" align:center>
+		<div class="aanwijzing_box">
         	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Aanwijzing 2</button></div>
         </div>
     </body>
