--- a/home.html
+++ b/home.html
@@ -21,18 +21,22 @@
 				</ul>
 			</div>
 		</nav>
-    	<body>
-    		<div class="pagina">
-    			<h3>START VAN DE SPEURTOCHT</h3>
-    			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek van de speurtocht met de eerste instructie daarbij. Volg de intructies om bij de volgende aanwijzing te komen. Aan het einde van de speurtocht vindt je misschien wel een troFee. </p>
-    			<p>Benodigdheden voor deze speurtocht:</p>
-    			<ul>
-    				<li>Schaar</li>
-    				<li>Kompas</li>
-    			</ul>
-    			<img src="">
-    			<p>INPUT EERSTE INSTRUCTIE</p>
-    		</div>
-    	</body>
+		<div class="pagina">
+			<h3>START VAN DE SPEURTOCHT</h3>
+			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek van de speurtocht met de eerste instructie daarbij. Volg de intructies om bij de volgende aanwijzing te komen. Aan het einde van de speurtocht vindt je misschien wel een troFee. </p>
+			<p>Benodigdheden voor deze speurtocht:</p>
+			<ul>
+				<li>Schaar</li>
+				<li>Kompas</li>
+			</ul>
+			<img id="foto_start" src="foto_start.jpg">
+			<p>INPUT EERSTE INSTRUCTIE</p>
+		</div>
+        <div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing1.html'">Aanwijzing 1</button></div>
+        <footer>
+	        <div class="footer_bar">
+	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
+	        </div>
+    	</footer>
     </body>
 </html>
