--- a/aanwijzing2.html
+++ b/aanwijzing2.html
@@ -22,7 +22,11 @@
 			</div>
 		</nav>
 		<div class="pagina">
+			<img src="foto_start.jpg">
 			<p>INPUT TWEEDE AANWIJZING</p>
 		</div>
+		<div class="aanwijzing_box">
+        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing3.html'">Aanwijzing 3</button></div>
+        </div>
     </body>
 </html>
