home.html naar # in nav bar

--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -22,7 +22,8 @@
 			</div>
 		</nav>
 		<div class="pagina">
-			<img src="foto_start.jpg">
+			<h3>AANWIJZING 1</h3>
+			<img class="foto_aanwijzing" src="foto_start.jpg">
 			<p>Je hebt de eerste aanwijzing gevonden!!! Nu begint het echte werk.</p>
 		</div>
 		<div class="aanwijzing_box">
