--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link active" href="home.html">Home</a>
+						<a class="nav-link active" href="#">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
@@ -32,7 +32,7 @@
 			<img id="foto_start" src="foto_start.jpg">
 			<p>INPUT EERSTE INSTRUCTIE</p>
 		</div>
-        <div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing1.html'">Aanwijzing 1</button></div>
+        <div><button class="aanwijzing_button" onclick="location.href='aanwijzing1.html'">Aanwijzing 1</button></div>
         <footer>
 	        <div class="footer_bar">
 	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
