Alle aanwijzingen toegevoegd en ingevoerd. Index.html heeft nu vergelijkbare inhoud als home.html had

--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -13,21 +13,20 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link active" href="https://tomdevalk1997.github.io/project0/">Home</a>
+						<a class="nav-link" href="home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
+						<a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 		<div class="pagina">
 			<h3>AANWIJZING 1</h3>
-			<img class="foto_aanwijzing" src="foto_start.jpg">
-			<p>Je hebt de eerste aanwijzing gevonden!!! Nu begint het echte werk.</p>
+			<p>Je hebt de eerste aanwijzing gevonden!!! Dat betekent ook dat je het juiste pad hebt gevonden! Ga nu rechtdoor totdat je de tweede aanwijzing tegenkomt.</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Aanwijzing 2</button></div>
+        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Klik hier wanneer je aanwijzing 2 gevonden hebt</button></div>
         </div>
     </body>
 </html>
