--- a/aanwijzing2.html
+++ b/aanwijzing2.html
@@ -13,20 +13,20 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link active" href="#">Home</a>
+						<a class="nav-link" href="home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
+						<a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 		<div class="pagina">
-			<img src="foto_start.jpg">
-			<p>INPUT TWEEDE AANWIJZING</p>
+			<h3>AANWIJZING 2</h3>
+			<p>Deze was nog niet zo moeilijk toch? Ga bij het volgende pad naar links en ga rechtdoor totdat je bij het hek komt. Bij het hek ga je rechts. Aanwijzing 3 zit in de buurt van de opening in het hek.</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing3.html'">Aanwijzing 3</button></div>
+        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing3.html'">Klik hier wanneer je aanwijzing 3 gevonden hebt</button></div>
         </div>
     </body>
 </html>
