--- a/aanwijzing3.html
+++ b/aanwijzing3.html
@@ -13,20 +13,20 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link active" href="#">Home</a>
+						<a class="nav-link" href="home.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
+						<a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 		<div class="pagina">
-			<img src="foto_start.jpg">
-			<p>INPUT DERDE AANWIJZING</p>
+			<h3>AANWIJZING 3</h3>
+			<p>Ga door het hek en loop 60 stappen in zuidoostelijke richting. Draai vervolgens 45 graden naar links en loop 100 stappen vooruit. Aanwijzing 4 zit nu in een boom rechts van je. Het kan wel glad zijn, dus pas op met je schaar!</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing4.html'">Aanwijzing 4</button></div>
+        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing4.html'">Klik hier wanneer je aanwijzing 4 gevonden hebt</button></div>
         </div>
     </body>
 </html>
