--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link active" href="#">Home</a>
+						<a class="nav-link active" href="home.html">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="aanwijzingen.html">Aanwijzingen</a>
@@ -23,16 +23,9 @@
 		</nav>
 		<div class="pagina">
 			<h3>START VAN DE SPEURTOCHT</h3>
-			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek van de speurtocht met de eerste instructie daarbij. Volg de intructies om bij de volgende aanwijzing te komen. Aan het einde van de speurtocht vindt je misschien wel een troFee. </p>
-			<p>Benodigdheden voor deze speurtocht:</p>
-			<ul>
-				<li>Schaar</li>
-				<li>Kompas</li>
-			</ul>
-			<img id="foto_start" src="foto_start.jpg">
-			<p>INPUT EERSTE INSTRUCTIE</p>
+			<p>Vanaf de start loop je naar de heuvel aan de zuidkant van het dalletje. Daar loop je precies in het midden van de heuvel omhoog zodat je bovenaan bij het juiste pad uitkomt. Aanwijzing 1 vind je op dit juiste pad.</p>
 		</div>
-        <div><button class="aanwijzing_button" onclick="location.href='aanwijzing1.html'">Aanwijzing 1</button></div>
+        <div><button class="aanwijzing_button" onclick="location.href='aanwijzing1.html'">Klik hier wanneer je aanwijzing 1 gevonden hebt</button></div>
         <footer>
 	        <div class="footer_bar">
 	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
