--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>Speurtocht</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     <body>
-        Hello, world!
+    	<header>
+    		<h1>Project0 = SPEURTOCHT</h1>
+    	</header>
+		<div class="pagina">
+			<h3>START VAN DE SPEURTOCHT</h3>
+			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek.</p>
+			<p>Benodigdheden voor deze speurtocht:</p>
+			<ul>
+				<li>Schaar</li>
+				<li>Kompas</li>
+			</ul>
+			<img id="foto_start" src="foto_start.jpg">
+		</div>
+        <div><button class="aanwijzing_button" onclick="location.href='home.html'">Start de speurtocht!</button></div>
+        <footer>
+	        <div class="footer_bar">
+	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
+	        </div>
+    	</footer>
     </body>
 </html>
