--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -13,7 +13,7 @@
             <div class="navigation_bar">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://tomdevalk1997.github.io/project0/">Home</a>
+                        <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
