--- a/aanwijzing8.html
+++ b/aanwijzing8.html
@@ -25,5 +25,10 @@
 			<h3>AANWIJZING 8</h3>
 			<p>Wauw, je hebt de laatste aanwijzing gevonden! Als je nu naar het kwadrant kijkt tussen oost en zuid, zie je 3 boompjes die nog helemaal groen zijn. In een van deze 3 vind je de trofee. Heel veel succes!</p>
 		</div>
+		<footer>
+	        <div class="footer_bar">
+	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
+	        </div>
+    	</footer>
     </body>
 </html>
