--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -35,5 +35,10 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
+        <footer>
+            <div class="footer_bar">
+                HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
+            </div>
+        </footer>
     </body>
 </html>
