--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -28,5 +28,10 @@
 		<div class="aanwijzing_box">
         	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing2.html'">Klik hier wanneer je aanwijzing 2 gevonden hebt</button></div>
         </div>
+        <footer>
+	        <div class="footer_bar">
+	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
+	        </div>
+    	</footer>
     </body>
 </html>
