--- a/aanwijzing4.html
+++ b/aanwijzing4.html
@@ -26,7 +26,7 @@
 			<p>Volg het pad en ga bij het volgende pad naar bakboord.</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing5.html'">Klik hier wanneer je aanwijzing 5 gevonden hebt</button></div>
+        	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing5.html'">Klik hier wanneer je aanwijzing 5 gevonden hebt</button></div>
         </div>
         <footer>
 	        <div class="footer_bar">
