--- a/aanwijzing5.html
+++ b/aanwijzing5.html
@@ -26,7 +26,7 @@
 			<p>Houd links aan en loop rechtdoor totdat je aanwijzing 6 tegenkomt.</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing6.html'">Klik hier wanneer je aanwijzing 6 gevonden hebt</button></div>
+        	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing6.html'">Klik hier wanneer je aanwijzing 6 gevonden hebt</button></div>
         </div>
         <footer>
 	        <div class="footer_bar">
