--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			</ul>
 			<img id="foto_start" src="foto_start.jpg">
 		</div>
-        <div><button class="aanwijzing_button" onclick="location.href='home.html'">Start de speurtocht!</button></div>
+		<div class="aanwijzing_box">
+        	<div><button class="volgende_aanwijzing" onclick="location.href='home.html'">Start de speurtocht!</button></div>
+        </div>
         <footer>
 	        <div class="footer_bar">
 	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
