--- a/aanwijzing3.html
+++ b/aanwijzing3.html
@@ -26,7 +26,7 @@
 			<p>Ga door het hek en loop 60 stappen in zuidoostelijke richting. Draai vervolgens 45 graden naar links en loop 100 stappen vooruit. Aanwijzing 4 zit nu in een boom rechts van je. Het kan wel glad zijn, dus pas op met je schaar!</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing4.html'">Klik hier wanneer je aanwijzing 4 gevonden hebt</button></div>
+        	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing4.html'">Klik hier wanneer je aanwijzing 4 gevonden hebt</button></div>
         </div>
         <footer>
 	        <div class="footer_bar">
