--- a/aanwijzing6.html
+++ b/aanwijzing6.html
@@ -26,7 +26,7 @@
 			<p>Neem 90 stappen vooruit en sla dan rechts af. Loop door totdat je aanwijzing 7 tegenkomt. Begin echter niet met afdalen voordat je aanwijzing 7 hebt gevonden!</p>
 		</div>
 		<div class="aanwijzing_box">
-        	<div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Klik hier wanneer je aanwijzing 7 gevonden hebt</button></div>
+        	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing7.html'">Klik hier wanneer je aanwijzing 7 gevonden hebt</button></div>
         </div>
         <footer>
 	        <div class="footer_bar">
