--- a/home.html
+++ b/home.html
@@ -25,7 +25,9 @@
 			<h3>START VAN DE SPEURTOCHT</h3>
 			<p>Vanaf de start loop je naar de heuvel aan de zuidkant van het dalletje. Daar loop je precies in het midden van de heuvel omhoog zodat je bovenaan bij het juiste pad uitkomt. Aanwijzing 1 vind je op dit juiste pad.</p>
 		</div>
-        <div><button class="aanwijzing_button" onclick="location.href='aanwijzing1.html'">Klik hier wanneer je aanwijzing 1 gevonden hebt</button></div>
+		<div class="aanwijzing_box">
+       		<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing1.html'">Klik hier wanneer je aanwijzing 1 gevonden hebt</button></div>
+        </div>
         <footer>
 	        <div class="footer_bar">
 	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
