--- a/aanwijzing8.html
+++ b/aanwijzing8.html
@@ -25,6 +25,9 @@
 			<h3>AANWIJZING 8</h3>
 			<p>Wauw, je hebt de laatste aanwijzing gevonden! Als je nu naar het kwadrant kijkt tussen oost en zuid, zie je 3 boompjes die nog helemaal groen zijn. In een van deze 3 vind je de trofee. Heel veel succes!</p>
 		</div>
+		<div class="aanwijzing_box">
+        	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzingen.html'">Naar het overzicht van alle aanwijzingen</button></div>
+        </div>
 		<footer>
 	        <div class="footer_bar">
 	        	HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
