--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -13,7 +13,7 @@
     		<div class="navigation_bar">
 	    		<ul class="nav">
 					<li class="nav-item">
-						<a class="nav-link" href="home.html">Home</a>
+						<a class="nav-link" href="home.html">Start</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link active" href="aanwijzingen.html">Aanwijzingen</a>
