Foto op homepage

--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
 		</nav>
 		<div class="pagina">
 			<h3>START VAN DE SPEURTOCHT</h3>
+			<img class="foto" src="foto_start.jpg">
 			<p>Vanaf de start loop je naar de heuvel aan de zuidkant van het dalletje. Daar loop je precies in het midden van de heuvel omhoog zodat je bovenaan bij het juiste pad uitkomt. Aanwijzing 1 vind je op dit juiste pad.</p>
 		</div>
 		<div class="aanwijzing_box">
