--- a/aanwijzing7.html
+++ b/aanwijzing7.html
@@ -26,6 +26,7 @@
 			<p>Ga rechtdoor en volg het pad naar beneden. Wanneer je beneden bent aangekomen moet je heel goed om je heen gaan kijken. Er staan namelijk meerdere metalen paaltjes. Op een van deze paaltjes vind je aanwijzing 8.</p>
 		</div>
 		<div class="aanwijzing_box">
+			<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing6.html'">Terug naar aanwijzing 6</button></div>
         	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing8.html'">Klik hier wanneer je aanwijzing 8 gevonden hebt</button></div>
         </div>
         <footer>
