--- a/aanwijzing1.html
+++ b/aanwijzing1.html
@@ -26,6 +26,7 @@
 			<p>Je hebt de eerste aanwijzing gevonden!!! Dat betekent ook dat je het juiste pad hebt gevonden! Ga nu rechtdoor totdat je de tweede aanwijzing tegenkomt.</p>
 		</div>
 		<div class="aanwijzing_box">
+			<div><button class="volgende_aanwijzing" onclick="location.href='home.html'">Terug naar start</button></div>
         	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing2.html'">Klik hier wanneer je aanwijzing 2 gevonden hebt</button></div>
         </div>
 
