--- a/aanwijzing2.html
+++ b/aanwijzing2.html
@@ -26,6 +26,7 @@
 			<p>Deze was nog niet zo moeilijk toch? Ga bij het volgende pad naar links en ga rechtdoor totdat je bij het hek komt. Bij het hek ga je rechts. Aanwijzing 3 zit in de buurt van de opening in het hek.</p>
 		</div>
 		<div class="aanwijzing_box">
+			<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing1.html'">Terug naar aanwijzing 1</button></div>
         	<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing3.html'">Klik hier wanneer je aanwijzing 3 gevonden hebt</button></div>
         </div>
         <footer>
