--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     		<h1>Project0 = SPEURTOCHT</h1>
     	</header>
 		<div class="pagina">
-			<h3>START VAN DE SPEURTOCHT</h3>
-			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Onderaan deze pagina vindt je een foto van de startplek.</p>
+			<p>Zoals je inmiddels misschien wel doorhebt is mijn project0 een speurtocht. Hieronder vind je een foto van de startplek.</p>
 			<img id="foto_start" src="foto_start.jpg">
 			<p>Benodigdheden voor deze speurtocht:</p>
 			<ul>
 				<li>Schaar</li>
 				<li>Kompas</li>
 			</ul>
+			<p>Heel veel plezier!!</p>
 		</div>
 		<div class="aanwijzing_box">
         	<div><button class="volgende_aanwijzing" onclick="location.href='home.html'">Start de speurtocht!</button></div>
