Code changes to meet requirements

--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -35,6 +35,54 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
+        <div>
+            <table>
+                <tr>
+                    <th>Aanwijzing naam</th>
+                    <th>Voorgaande aanwijzing</th>
+                    <th>Opvolgende aanwijzing</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Start</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>4</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>5</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>6</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>7</td>
+                </tr>
+            </table>
+        </div>
         <footer>
             <div class="footer_bar">
                 HEEL VEEL PLEZIER MET DE SPEURTOCHT!!
