Warning message index.html

--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Speurtocht</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -35,16 +36,16 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
-        <div>
+        <div class="pagina">
             <table>
                 <tr>
-                    <th>Aanwijzing naam</th>
+                    <th>Naam Aanwijzing</th>
                     <th>Voorgaande aanwijzing</th>
                     <th>Opvolgende aanwijzing</th>
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>Start</td>
+                    <td></td>
                     <td>2</td>
                 </tr>
                 <tr>
@@ -80,8 +81,21 @@
                 <tr>
                     <td>8</td>
                     <td>7</td>
+                    <td></td>
                 </tr>
             </table>
+        </div>
+        <div class="pagina">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        Hier ging ik nog iets leuks zetten omdat ik nog twee kolommen van een Bootstrap grid moest gebruiken.
+                    </div>
+                    <div class="col-sm">
+                        Toen was de speurtocht ineens klaar en had ik weinig meer te schrijven in deze twee super coole kolommen.
+                    </div>
+                </div>
+            </div>
         </div>
         <footer>
             <div class="footer_bar">
