--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
 		<div class="pagina">
 			<h3>START VAN DE SPEURTOCHT</h3>
 			<img class="foto" src="foto_start.jpg">
+			<p>Heel leuk dat je speurtocht gaat doen! Als je goed geluisterd hebt naar de vorige pagina, dan ben je hier alleen maar aangekomen als je de speurtocht ook echt gaat doen, dus... Veel plezier!</p>
 			<p>Vanaf de start loop je naar de heuvel aan de zuidkant van het dalletje. Daar loop je precies in het midden van de heuvel omhoog zodat je bovenaan bij het juiste pad uitkomt. Aanwijzing 1 vind je op dit juiste pad.</p>
 		</div>
 		<div class="aanwijzing_box">
