--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li>Schaar</li>
 				<li>Kompas</li>
 			</ul>
-			<p>Heel veel plezier!!</p>
+			<p>Voor nu mag je niet verder klikken dan deze pagina aangezien je de speurtocht niet nu gaat doen. Je mag pas op de onderstaande knop klikken als je de speurtocht ook echt gaat doen. Aangezien je met de speurtocht naar buiten gaat, zal het laden van de pagina's wel wat data kosten. Deze pagina en de volgende bevatten een foto, de rest niet. Als dit teveel data kost mag je ook deze pagina en de volgende screenshotten en vervolgens beginnen bij <a href="https://tomdevalk1997.github.io/project0/aanwijzing1.html">aanwijzing 1</a>.</p>
 		</div>
 		<div class="aanwijzing_box">
         	<div><button class="volgende_aanwijzing" onclick="location.href='home.html'">Start de speurtocht!</button></div>
