Table disappear on smaller screens

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 			<p>Vanaf de start loop je naar de heuvel aan de zuidkant van het dalletje. Daar loop je precies in het midden van de heuvel omhoog zodat je bovenaan bij het juiste pad uitkomt. Aanwijzing 1 vind je op dit juiste pad.</p>
 		</div>
 		<div class="aanwijzing_box">
-			<div><button class="volgende_aanwijzing" onclick="location.href='index.html'">Terug naar de eerst pagina</button></div>
+			<div><button class="volgende_aanwijzing" onclick="location.href='index.html'">Terug naar de eerste pagina</button></div>
        		<div><button class="volgende_aanwijzing" onclick="location.href='aanwijzing1.html'">Klik hier wanneer je aanwijzing 1 gevonden hebt</button></div>
         </div>
         <footer>
