--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Speurtocht</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
@@ -37,7 +36,7 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
         <div class="pagina">
-            <table>
+            <table id="aanwijzingen_tabel">
                 <tr>
                     <th>Naam Aanwijzing</th>
                     <th>Voorgaande aanwijzing</th>
