--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -36,7 +36,7 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
         <div class="pagina">
-            <table id="aanwijzingen_tabel">
+            <table>
                 <tr>
                     <th>Naam Aanwijzing</th>
                     <th>Voorgaande aanwijzing</th>
@@ -95,6 +95,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="alert_scherm" class="pagina">
+            <p>Deze tekst wordt alleen weergegeven op een groot scherm.</p>
         </div>
         <footer>
             <div class="footer_bar">
