--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -35,8 +35,8 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
-        <div class="pagina">
-            <table #aanwijzingen_tabel>
+        <div id="box_aanwijzingen_tabel" class="pagina">
+            <table id="aanwijzingen_tabel">
                 <tr>
                     <th>Naam Aanwijzing</th>
                     <th>Voorgaande aanwijzing</th>
