--- a/aanwijzingen.html
+++ b/aanwijzingen.html
@@ -35,7 +35,7 @@
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing7.html'">Aanwijzing 7</button></div>
             <div><button class="aanwijzing_button" onclick="location.href='aanwijzing8.html'">Aanwijzing 8</button></div>
         </div>
-        <div id="box_aanwijzingen_tabel" class="pagina">
+        <div class="pagina">
             <table id="aanwijzingen_tabel">
                 <tr>
                     <th>Naam Aanwijzing</th>
